Discard `-Xverify:none`