@@ -41,8 +41,6 @@
                                                  ;; Set a minimum amount of memory that matches/exceeds a given repl's initial usage (including various tooling).
                                                  ;; This way, initial performance improves:
                                                  "-Xms6G"
-                                                 ;; Improves startup time:
-                                                 "-Xverify:none"
                                                  ;; Enable various optimizations, for guaranteeing accurate benchmarking (at the cost of slower startup):
                                                  "-server"]
                       :monkeypatch-clojure-test false}
